fix: Fix code check warns.